--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                 Vi är erfarna programmerare inom Java och MySql, men vi håller nu på att fördjupa våra kunskaper inom
                 HTML, CSS och JavaScript.
                 Tidigare har vi även designat ett system åt örebro universitets informatikutskott med syfte att öka sin
-                interna kommunikation.
+                interna kommunikation. 123
 
             </p>
 
