--- a/grupparbete.html
+++ b/grupparbete.html
@@ -7,11 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Välkommen till oss!</title>
     <link rel="stylesheet" href="arbete.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300;400;500;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="header">
-        <nav id="menu">
+        <div id = "menu">
+            <img id = "menuImg" src="menuIcon" alt="menu">
+        </div>
+        <!-- <nav id="menu">
             <ul>
                 <li> <a href="grupparbete.html">Hem</a></li>
                 <li> <a href="contact.html">Kontakta oss</a></li>
@@ -19,7 +26,7 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
 
             </ul>
-        </nav>
+        </nav> -->
     </div>
     <div id="welcomeHeader">
         <h1>Välkommen till vårt arbete!</h1>
@@ -43,7 +50,8 @@
     <div id="text">
 
         <p>
-            Välkommen till vår hemsida! Vänligen använd menyn högst upp för att navigera runt. <br>Hälsningar,<br> Victor, André, Anton och Noel.
+            Välkommen till vår hemsida! Vänligen använd menyn högst upp för att navigera runt. <br>Hälsningar,<br>
+            Victor, André, Anton och Noel.
         </p>
 
     </div>
