--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
                     <img class="slidePic" src="mib3.png">
                     
                 </div>
-                <button class= "button" id ="pause">Pause!</button>
+                <button class= "button" id ="pause">Pause</button>
                 <p class="postText">MIB-Projektet var det första programmeringsprojektet vi genomförde på det
                     systemvetenskapliga programmet.
                     Det gick ut på att bygga ett system som agenterna skulle använda för att hålla koll på bland annat
@@ -73,7 +73,7 @@
                     <img class="slidePic2" src="ghosthunt3.jpg" alt = fel>
                     
                 </div>
-                <button class= "button" id ="pause2">Pause!</button>
+                <button class= "button" id ="pause2">Pause</button>
                 <p class="postText">MIB-Projektet var det första programmeringsprojektet vi genomförde på det
                     systemvetenskapliga programmet.
                     Det gick ut på att bygga ett system som agenterna skulle använda för att hålla koll på bland annat
