--- a/about.html
+++ b/about.html
@@ -39,33 +39,13 @@
             <li class="dropdownLi"><a class="dropdownA" href="portfolio.html">Portfolio</a></li>
         </ul>
     </div>
-    <div class="aboutHeader">
+    <div id="aboutHeader">
         <h1>
             Om oss
         </h1>
     </div>
-    <div id="gallery">
-        <div class="img">
-            <img src="noel.jpg" alt="noel">
-        </div>
-        <div class="img">
-            <img src="victor.jpg" alt="victor">
-        </div>
-        <div class="img">
-            <img src="wisnu.jpg" alt="wisnu">
-        </div>
-        <div class="img">
-            <img src="anton.jpg" alt="anton">
-        </div>
-        <p id="names">
-            <a href="noel.html">Noel Lindgren</a>
-            <a href="victor.html">Victor Hultqvist</a> <br>
-            <a href="andre.html">André Rehnström</a>
-            <a href="anton.html">Anton Lyrberg</a>
 
-        </p>
-    </div>
-    <p>
+    <p id="aboutText">
         Denna grupp består av Noel Lindgren, Anton Lyrberg, André Rehnström och Victor Hultqvist. <br>
         Vi går 2a året på det Systemvetenskapliga programmet på Örebor Universitet. <br>
         Vi är erfarna programmerare inom Java och MySql, men vi håller nu på att fördjupa våra kunskaper inom
@@ -75,6 +55,14 @@
 
     </p>
 
+    <div id="nameList">
+        <ul id="names">
+            <li class="namesItem"><a href="noel.html">Noel Lindgren</a></li>
+            <li class="namesItem"><a href="victor.html">Victor Hultqvist</a></li>
+            <li class="namesItem"> <a href="andre.html">André Rehnström</a></li>
+            <li class="namesItem"><a href="anton.html">Anton Lyrberg</a></li>
+
+        </ul>
     </div>
     <!-- Script ready(function(){}); -->
     <script src="script.js"></script>
