--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 
-<body id="contactBody">
+<body class="body">
     <!-- Sidans Header -->
     <div class="header">
         <div id="wrapperIcon">
