--- a/grupparbete.html
+++ b/grupparbete.html
@@ -48,6 +48,7 @@
 
         <!-- Bildgalleri -->
         <div id="gallery">
+            <button class= "button" id ="pause">Pause!</button>
             <img class="slidePic" src="anton.jpg">
             <img class="slidePic" src="noel.jpg">
             <img class="slidePic" src="victor.jpg">
