--- a/grupparbete.html
+++ b/grupparbete.html
@@ -17,6 +17,11 @@
     <link rel="stylesheet" href="arbete.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Koh+Santepheap:wght@300;400&family=Roboto+Slab&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -42,28 +47,24 @@
     <div id="wrapperMain">
 
         <!-- Titel -->
-        <div id="welcomeHeader">
-            <h1>Välkommen till vårt arbete!</h1>
+        <div class="wrapperTitle">
+            <h1 class="pageTitle">Välkommen till vårt arbete!</h1>
+        </div>
+        <div id="frontpagePic">
+            <img id="novahuset" src="novahuset.jpg">
         </div>
 
-        <!-- Bildgalleri -->
-        <div id="gallery">
-            <button class= "button" id ="pause">Pause!</button>
-            <img class="slidePic" src="anton.jpg">
-            <img class="slidePic" src="noel.jpg">
-            <img class="slidePic" src="victor.jpg">
-            <img class="slidePic" src="wisnu.jpg">
-        </div>
-        
+
         <!-- Text Information -->
-        <div id="text">
-            <p>
-                Välkommen till vår hemsida! Vänligen använd menyn högst upp för att navigera runt. <br>Hälsningar,<br>
-                Victor, André, Anton och Noel.
+        <div id="textDiv">
+            <p id="frontpageText">
+                Välkommen till vår hemsida! Vänligen använd menyn högst upp för att navigera
+                runt.<br><br>Hälsningar,<br>
+                André, Anton, Noel och Victor.
             </p>
         </div>
 
-    <!-- Slut på Kroppen -->
+        <!-- Slut på Kroppen -->
     </div>
 
     <!-- Script ready(function(){}); -->
