--- a/about.html
+++ b/about.html
@@ -57,10 +57,10 @@
 
     <div id="nameList">
         <ul id="names">
-            <li class="namesItem"><a href="noel.html" class="nameLink">Noel Lindgren</a></li>
-            <li class="namesItem"><a href="victor.html" class="nameLink">Victor Hultqvist</a></li>
-            <li class="namesItem"> <a href="andre.html" class="nameLink">André Rehnström</a></li>
-            <li class="namesItem"><a href="anton.html" class="nameLink">Anton Lyrberg </a></li>
+            <li class="namesItem" id="name1">Noel Lindgren</li>
+            <li class="namesItem" id="name2">Victor Hultqvist</li>
+            <li class="namesItem" id="name3">André Rehnström</li>
+            <li class="namesItem" id="name4">Anton Lyrberg</li>
 
         </ul>
     </div>
