--- a/contact.html
+++ b/contact.html
@@ -39,22 +39,22 @@
 
 
     <div class="contactForm">
-        <form name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post">
+        <form name="form" action=" " onsubmit="return validateForm()" method="post">
 
             <label for="fname">Förnamn</label>
-            <input type="text" id="fname" name="firstname" placeholder="Ditt förnamn...">
+            <input type="text" id="fname" name="firstname">
 
             <label for="lname">Efternamn</label>
-            <input type="text" id="lname" name="lastname" placeholder="Ditt efternamn...">
+            <input type="text" id="lname" name="lastname">
 
             <label for="email">Epost</label>
-            <input type="text" id="email" name="email" placeholder="Din epostadress...">
+            <input type="text" id="email" name="email">
 
             <label for="phone">Telefonnummer</label>
-            <input type="text" id="phone" name="phone" placeholder="Ditt telefonnummer...">
+            <input type="text" id="phone" name="phone">
 
-            <label for="subject">Ditt ärende</label>
-            <textarea id="subject" name="subject" placeholder="Skriv något om ditt ärende..."
+            <label for="textArea">Ditt ärende</label>
+            <textarea id="textArea" name="textArea" placeholder="Skriv något om ditt ärende..."
                 style="height:200px"></textarea>
 
             <label for="contact">Hur vill du helst bli kontaktad?</label>
