--- a/anton.html
+++ b/anton.html
@@ -37,9 +37,17 @@
             <li class="dropdownLi"><a class="dropdownA" href="portfolio.html">Portfolio</a></li>
         </ul>
     </div>
-    <div class="img">
-        <img src="anton.jpg" alt="anton">
+    <div class="wrapperTitle">
+        <h1 class="pageTitle">Anton Lyrberg</h1>
     </div>
+
+    <div class="imgDiv">
+        <img class="img" src="anton.jpg.JPEG" alt="anton">
+    </div>
+    <div class="textDiv">
+        <p class="personalText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in dolor quis orci dapibus elementum et ut lacus. Vestibulum eu tincidunt sem, at dignissim sem. Vivamus feugiat hendrerit erat, eget dapibus felis. Quisque sollicitudin pellentesque dolor ut gravida. Proin quis eleifend eros, non eleifend sapien. Nunc gravida enim nec felis.</p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
