--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
 
 
     <!-- Script ready(function(){}); -->
-    <script src="script.js"></script>
+    <script src="contactscript.js"></script>
 </body>
 
 </html>
