--- a/grupparbete.html
+++ b/grupparbete.html
@@ -68,7 +68,7 @@
     </div>
 
     <!-- Script ready(function(){}); -->
-    <script src="script.js"></script>
+    <script src="homepagescript.js"></script>
 
 </body>
 
