--- a/about.html
+++ b/about.html
@@ -46,12 +46,15 @@
     </div>
 
     <p id="aboutText">
-        Denna grupp består av Noel Lindgren, Anton Lyrberg, André Rehnström och Victor Hultqvist. <br>
-        Vi går 2a året på det Systemvetenskapliga programmet på Örebor Universitet. <br>
+        Denna grupp består av <b>Noel</b>, <b>Anton</b>, <b>André</b> och <b>Victor</b>.
+        Vi läser andra året på det Systemvetenskapliga programmet vid Örebor Universitet. <br>
         Vi är erfarna programmerare inom Java och MySql, men vi håller nu på att fördjupa våra kunskaper inom
-        HTML, CSS och JavaScript.<br>
-        Tidigare har vi designat ett system åt örebro universitets informatikutskott med syfte att öka sin
-        interna kommunikation.
+        HTML, CSS och JavaScript. På fritiden har vi ett gemensamt projekt där vi åker runt på diverse hemsökta platser och jagar spöken.<br>
+        Vi har tidigare designat ett system åt den intergalaktiska gruppen Men in Black i syfte att förbättra
+        den interna kommunikationen och statestikförning i en gemensam databas. (Dessa projekt kan ni läsa om under kategorin "Portfolio")
+        <br><br>
+        Är du intresserad av vad respektive gruppmedlem har att erbjuda? Klicka då gärna in på våra personliga sidor via knapparna under.
+
 
     </p>
 
@@ -65,7 +68,7 @@
         </ul>
     </div>
     <!-- Script ready(function(){}); -->
-    <script src="script.js"></script>
+    <script src="aboutscript.js"></script>
 </body>
 
 </html>
