Länkar till script från personliga sidor

--- a/andre.html
+++ b/andre.html
@@ -40,7 +40,7 @@
     <div class="img">
         <img src="wisnu.jpg" alt="wisnu">
     </div>
-    <script src="script.js"></script>
+    <script src="homepagescript.js"></script>
 </body>
 
 </html>
