--- a/anton.html
+++ b/anton.html
@@ -40,7 +40,7 @@
     <div class="img">
         <img src="anton.jpg" alt="anton">
     </div>
-    <script src="script.js"></script>
+    <script src="homepagescript.js"></script>
 </body>
 
 </html>
