--- a/noel.html
+++ b/noel.html
@@ -41,7 +41,7 @@
     <div class="img">
         <img src="noel.jpg" alt="noel">
     </div>
-    <script src="script.js"></script>
+    <script src="homepagescript.js"></script>
 </body>
 
 </html>
