--- a/victor.html
+++ b/victor.html
@@ -40,7 +40,7 @@
     <div class="img">
         <img src="victor.jpg" alt="victor">
     </div>
-    <script src="script.js"></script>
+    <script src="homepagescript.js"></script>
 </body>
 
 </html>
