--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         </h1>
     </div>
 
-    <p id="aboutText">
+    <p class="aboutText">
         Denna grupp består av <b>Noel</b>, <b>Anton</b>, <b>André</b> och <b>Victor</b>.
         Vi läser andra året på det Systemvetenskapliga programmet vid Örebor Universitet. <br>
         Vi är erfarna programmerare inom Java och MySql, men vi håller nu på att fördjupa våra kunskaper inom
