meny och annat skit

--- a/about.html
+++ b/about.html
@@ -39,33 +39,38 @@
             <li class="dropdownLi"><a class="dropdownA" href="portfolio.html">Portfolio</a></li>
         </ul>
     </div>
-    <div id="aboutHeader">
-        <h1>
-            Om oss
-        </h1>
-    </div>
+    <div class="main">
+        <div id="aboutHeader">
+            <h1>
+                Om oss
+            </h1>
+        </div>
 
-    <p class="aboutText">
-        Denna grupp består av <b>Noel</b>, <b>Anton</b>, <b>André</b> och <b>Victor</b>.
-        Vi läser andra året på det Systemvetenskapliga programmet vid Örebor Universitet. <br>
-        Vi är erfarna programmerare inom Java och MySql, men vi håller nu på att fördjupa våra kunskaper inom
-        HTML, CSS och JavaScript. På fritiden har vi ett gemensamt projekt där vi åker runt på diverse hemsökta platser och jagar spöken.<br>
-        Vi har tidigare designat ett system åt den intergalaktiska gruppen Men in Black i syfte att förbättra
-        den interna kommunikationen och statestikförning i en gemensam databas. (Dessa projekt kan ni läsa om under kategorin "Portfolio")
-        <br><br>
-        Är du intresserad av vad respektive gruppmedlem har att erbjuda? Klicka då gärna in på våra personliga sidor via knapparna under.
+        <p class="aboutText">
+            Denna grupp består av <b>Noel</b>, <b>Anton</b>, <b>André</b> och <b>Victor</b>.
+            Vi läser andra året på det Systemvetenskapliga programmet vid Örebor Universitet. <br>
+            Vi är erfarna programmerare inom Java och MySql, men vi håller nu på att fördjupa våra kunskaper inom
+            HTML, CSS och JavaScript. På fritiden har vi ett gemensamt projekt där vi åker runt på diverse hemsökta
+            platser och jagar spöken.<br>
+            Vi har tidigare designat ett system åt den intergalaktiska gruppen Men in Black i syfte att förbättra
+            den interna kommunikationen och statestikförning i en gemensam databas. (Dessa projekt kan ni läsa om under
+            kategorin "Portfolio")
+            <br><br>
+            Är du intresserad av vad respektive gruppmedlem har att erbjuda? Klicka då gärna in på våra personliga sidor
+            via knapparna under.
 
 
-    </p>
+        </p>
 
-    <div id="nameList">
-        <ul id="names">
-            <li class="namesItem" id="name1">Noel Lindgren</li>
-            <li class="namesItem" id="name2">Victor Hultqvist</li>
-            <li class="namesItem" id="name3">André Rehnström</li>
-            <li class="namesItem" id="name4">Anton Lyrberg</li>
+        <div id="nameList">
+            <ul id="names">
+                <li class="namesItem" id="name1">Noel Lindgren</li>
+                <li class="namesItem" id="name2">Victor Hultqvist</li>
+                <li class="namesItem" id="name3">André Rehnström</li>
+                <li class="namesItem" id="name4">Anton Lyrberg</li>
 
-        </ul>
+            </ul>
+        </div>
     </div>
     <!-- Script ready(function(){}); -->
     <script src="aboutscript.js"></script>
