--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         </ul>
     </div>
 
-
+<div class="main">
     <div class="contactForm">
         <form name="form" action=" " onsubmit="return validateForm()" method="post">
 
@@ -71,7 +71,7 @@
         </form>
     </div>
 
-
+</div>
     <!-- Script ready(function(){}); -->
     <script src="contactscript.js"></script>
 </body>
