--- a/grupparbete.html
+++ b/grupparbete.html
@@ -44,7 +44,7 @@
     </div>
 
     <!-- Sidans "Kropp" -->
-    <div id="wrapperMain">
+    <div class="main">
 
         <!-- Titel -->
         <div class="wrapperTitle">
