--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
     </div>
 
     <!-- Sidinnehåll -->
-    <div id="wrapperMain">
+    <div class="main">
 
 
         <div class="wrapperTitle">
