--- a/noel.html
+++ b/noel.html
@@ -38,9 +38,81 @@
         </ul>
     </div>
 
-    <div class="img">
-        <img src="noel.jpg" alt="noel">
-    </div>
+    <div class="main">
+
+        <div class="wrapperTitle">
+            <h1 class="pageTitle">Noel Lindgren</h1>
+        </div>
+
+        <div class="imgDiv">
+            <img class="img" src="noel.jpg.JPEG" alt="noel">
+        </div>
+        <div class="textDiv">
+            <p class="personalText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in dolor quis orci
+                dapibus
+                elementum et ut lacus. Vestibulum eu tincidunt sem, at dignissim sem. Vivamus feugiat hendrerit erat,
+                eget
+                dapibus felis. Quisque sollicitudin pellentesque dolor ut gravida. Proin quis eleifend eros, non
+                eleifend
+                sapien. Nunc gravida enim nec felis.</p><br>
+            <hr /><br>
+        </div>
+        <!-- ------------------------ -->
+        <div class="skillsWrapper">
+            <h2 class="skillH2">Kunskaper</h2>
+            <div class="skillBox">
+                <p>Java</p>
+                <p>40%</p>
+                <div class="skill">
+                    <div class="skillLevel forty"></div>
+                </div>
+            </div>
+            <div class="skillBox">
+                <p>HTML</p>
+                <p>20%</p>
+                <div class="skill">
+                    <div class="skillLevel twenty">
+
+                    </div>
+                </div>
+            </div>
+            <div class="skillBox">
+                <p>CSS</p>
+                <p>30%</p>
+                <div class="skill">
+                    <div class="skillLevel thirty">
+
+                    </div>
+                </div>
+            </div>
+            <div class="skillBox">
+                <p>MySQL</p>
+                <p>70%</p>
+                <div class="skill">
+                    <div class="skillLevel seventy">
+
+                    </div>
+                </div>
+            </div>
+            <div class="skillBox">
+                <p>Adobe Photoshop</p>
+                <p>70%</p>
+                <div class="skill">
+                    <div class="skillLevel seventy">
+
+                    </div>
+                </div>
+            </div>
+            <div class="skillBox">
+                <p>Adobe Premiere</p>
+                <p>80%</p>
+                <div class="skill">
+                    <div class="skillLevel eighty">
+
+                    </div>
+                </div>
+            </div>
+        </div>
     <script src="homepagescript.js"></script>
 </body>
 
