--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
 <div class="main">
     <div class="contactForm">
-        <form name="form" action=" " onsubmit="return validateForm()">
+        <form name="form" action=" " onsubmit="validateForm()">
 
             <label for="fname">Förnamn</label>
             <input type="text" id="fname" name="firstname">
