--- a/grupparbete.html
+++ b/grupparbete.html
@@ -33,13 +33,23 @@
         </div>
     </div>
 
-    <!-- Drop down Meny -->
-    <div id="wrapperDropdown" class="hidden">
-        <ul id="dropdownUl">
-            <li class="dropdownLi"><a class="dropdownA" href="grupparbete.html">Hem</a></li>
-            <li class="dropdownLi"><a class="dropdownA" href="contact.html">Kontakta oss</a></li>
-            <li class="dropdownLi"><a class="dropdownA" href="about.html">Om oss</a></li>
-            <li class="dropdownLi"><a class="dropdownA" href="portfolio.html">Portfolio</a></li>
+    <!-- Drop down Meny - Mobil -->
+    <div id="wrapperDropdownMobile" class="hidden">
+        <ul id="dropdownUlMobile">
+            <li class="dropdownLiMobile"><a class="dropdownAMobile" href="grupparbete.html">Hem</a></li>
+            <li class="dropdownLiMobile"><a class="dropdownAMobile" href="contact.html">Kontakta oss</a></li>
+            <li class="dropdownLiMobile"><a class="dropdownAMobile" href="about.html">Om oss</a></li>
+            <li class="dropdownLiMobile"><a class="dropdownAMobile" href="portfolio.html">Portfolio</a></li>
+        </ul>
+    </div>
+
+    <!-- Drop down Meny - Dator -->
+    <div id="wrapperDropdownDesktop" class="hidden">
+        <ul id="dropdownUlDesktop">
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="grupparbete.html">Hem</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="contact.html">Kontakta oss</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="about.html">Om oss</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="portfolio.html">Portfolio</a></li>
         </ul>
     </div>
 
