--- a/grupparbete.html
+++ b/grupparbete.html
@@ -34,12 +34,12 @@
     </div>
 
     <!-- Drop down Meny - Mobil -->
-    <div id="wrapperDropdownMobile" class="hidden">
-        <ul id="dropdownUlMobile">
-            <li class="dropdownLiMobile"><a class="dropdownAMobile" href="grupparbete.html">Hem</a></li>
-            <li class="dropdownLiMobile"><a class="dropdownAMobile" href="contact.html">Kontakta oss</a></li>
-            <li class="dropdownLiMobile"><a class="dropdownAMobile" href="about.html">Om oss</a></li>
-            <li class="dropdownLiMobile"><a class="dropdownAMobile" href="portfolio.html">Portfolio</a></li>
+    <div id="wrapperDropdown" class="hidden">
+        <ul id="dropdownUl">
+            <li class="dropdownLi"><a class="dropdownA" href="grupparbete.html">Hem</a></li>
+            <li class="dropdownLi"><a class="dropdownA" href="contact.html">Kontakta oss</a></li>
+            <li class="dropdownLi"><a class="dropdownA" href="about.html">Om oss</a></li>
+            <li class="dropdownLi"><a class="dropdownA" href="portfolio.html">Portfolio</a></li>
         </ul>
     </div>
 
