--- a/about.html
+++ b/about.html
@@ -39,28 +39,40 @@
             <li class="dropdownLi"><a class="dropdownA" href="portfolio.html">Portfolio</a></li>
         </ul>
     </div>
+    <!-- Drop down Meny - Dator -->
+    <div id="wrapperDropdownDesktop" class="hidden">
+        <ul id="dropdownUlDesktop">
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="grupparbete.html">Hem</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="contact.html">Kontakta oss</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="about.html">Om oss</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="portfolio.html">Portfolio</a></li>
+        </ul>
+    </div>
     <div class="main">
         <div id="aboutHeader">
             <h1>
                 Om oss
             </h1>
         </div>
+        <div id="aboutDiv">
+            <p class="aboutText">
+                Denna grupp består av <b>Noel</b>, <b>Anton</b>, <b>André</b> och <b>Victor</b>.
+                Vi läser andra året på det Systemvetenskapliga programmet vid Örebor Universitet. <br>
+                Vi är erfarna programmerare inom Java och MySql, men vi håller nu på att fördjupa våra kunskaper inom
+                HTML, CSS och JavaScript. På fritiden har vi ett gemensamt projekt där vi åker runt på diverse hemsökta
+                platser och jagar spöken.<br>
+                Vi har tidigare designat ett system åt den intergalaktiska gruppen Men in Black i syfte att förbättra
+                den interna kommunikationen och statestikförning i en gemensam databas. (Dessa projekt kan ni läsa om
+                under
+                kategorin "Portfolio")
+                <br><br>
+                Är du intresserad av vad respektive gruppmedlem har att erbjuda? Klicka då gärna in på våra personliga
+                sidor
+                via knapparna under.
 
-        <p class="aboutText">
-            Denna grupp består av <b>Noel</b>, <b>Anton</b>, <b>André</b> och <b>Victor</b>.
-            Vi läser andra året på det Systemvetenskapliga programmet vid Örebor Universitet. <br>
-            Vi är erfarna programmerare inom Java och MySql, men vi håller nu på att fördjupa våra kunskaper inom
-            HTML, CSS och JavaScript. På fritiden har vi ett gemensamt projekt där vi åker runt på diverse hemsökta
-            platser och jagar spöken.<br>
-            Vi har tidigare designat ett system åt den intergalaktiska gruppen Men in Black i syfte att förbättra
-            den interna kommunikationen och statestikförning i en gemensam databas. (Dessa projekt kan ni läsa om under
-            kategorin "Portfolio")
-            <br><br>
-            Är du intresserad av vad respektive gruppmedlem har att erbjuda? Klicka då gärna in på våra personliga sidor
-            via knapparna under.
 
-
-        </p>
+            </p>
+        </div>
 
         <div id="nameList">
             <ul id="names">
