--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,15 @@
             <li class="dropdownLi"><a class="dropdownA" href="portfolio.html">Portfolio</a></li>
         </ul>
     </div>
+    <!-- Drop down Meny - Dator -->
+    <div id="wrapperDropdownDesktop" class="hidden">
+        <ul id="dropdownUlDesktop">
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="grupparbete.html">Hem</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="contact.html">Kontakta oss</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="about.html">Om oss</a></li>
+            <li class="dropdownLiDesktop"><a class="dropdownADesktop" href="portfolio.html">Portfolio</a></li>
+        </ul>
+    </div>
 
     <!-- Sidinnehåll -->
     <div class="main">
