--- a/grupparbete.html
+++ b/grupparbete.html
@@ -29,9 +29,12 @@
     <div class="header">
         <div id="wrapperIcon">
             <img id="menuIcon" src="list.png" alt="menu">
-            <!-- <img id="menuIcon" src="menuIcon.jpg" alt="menu"> -->
+        </div>
+        <div id="wrapperHome">
+            <img id="homeIcon" src="homeIcon.png" alt="home">
         </div>
     </div>
+    
 
     <!-- Drop down Meny - Mobil -->
     <div id="wrapperDropdown" class="hidden">
